Updates for job ordering.
